--- a/frontend/views/user/user_profile.html
+++ b/frontend/views/user/user_profile.html
@@ -36,6 +36,13 @@
                             <form>
                                 <div class="bg-white px-4 py-5 shadow sm:p-6 sm:rounded-tl-md sm:rounded-tr-md">
                                     <div class="grid grid-cols-6 gap-6">
+                                        <div class="col-span-6 sm:col-span-4"><input id="photo" type="file" class="hidden">
+                                            <div class="mt-2"><img
+                                                    src="https://ui-avatars.com/api/?bold=true&amp;name=n+p&amp;color=4c51bf&amp;background=82efe3"
+                                                    alt="nirmal prajapati" class="h-20 w-20 rounded-full object-cover"></div>
+                                            <button type="button" class="inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md font-semibold text-xs text-gray-700 uppercase tracking-widest shadow-sm hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:ring focus:ring-blue-200 active:text-gray-800 active:bg-gray-50 disabled:opacity-25 transition mr-2 mt-2">
+                                                Select A New Photo </button>
+                                        </div>
                                         <div class="col-span-6 sm:col-span-4"><label
                                                 class="block font-semibold text-sm text-gray-700"
                                                 for="name"><span>Name</span></label><input
