--- a/staticpages/views/user/index.html
+++ b/staticpages/views/user/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="icon" type="image/png" href="/frontend/public/img/ezservice logo.png">
+    <link rel="icon" type="image/png" href="../../public//img/ezservice logo.png">
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Custom Tailwind Configuration -->
