--- a/staticpages/views/provider/registration.html
+++ b/staticpages/views/provider/registration.html
@@ -193,7 +193,7 @@
                     return emailRegex.test(value) ? '' : 'Please enter a valid email address';
                 },
                 password: (value) => {
-                    const passwordRegex = /^(?=.*[0-9])(?=.*[!@#$%^&*])[a-zA-Z0-9!@#$%^&*]{8,}$/;
+                    const passwordRegex = /^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{8,}$/;
                     return passwordRegex.test(value) ? '' : 'Password must be at least 8 characters with a number and special character';
                 },
                 fullname: (value) => {
